samples/_failures_safe/1761605970_5c0a63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cb7a340.c: In function ‘main’:
./samples/SAFE/__tmp_0cb7a340.c:152:17: error: expected declaration or statement at end of input
  152 |                 }
      |                 ^
./samples/SAFE/__tmp_0cb7a340.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0cb7a340.c:152:17: error: expected declaration or statement at end of input
